# dishka_celery_example

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
my_app/: app.py
